--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,3 +13,16 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     //compile 'org.seleniumhq.selenium:selenium-java:2.50.0'
 }
+
+task testGroups(type:Test) {
+    useTestNG{
+        suites 'src/test/resources/testng-groups.xml'
+    }
+}
+
+
+task testContacts(type:Test) {
+    useTestNG{
+        suites 'src/test/resources/testng-contacts.xml'
+    }
+}
