--- a/mantis-tests1/src/test/resources/local.properties
+++ b/mantis-tests1/src/test/resources/local.properties
@@ -1,4 +1,4 @@
-web.baseUrl = http://http://localhost/mantisbt-2.2.1/
+web.baseUrl = http://localhost/mantisbt-2.2.1/
 web.adminLogin = administrator
 web.adminPassword = root
 #gradlew -Ptarget=local testContacts
