--- a/mantis-tests1/src/test/resources/local.properties
+++ b/mantis-tests1/src/test/resources/local.properties
@@ -1,4 +1,7 @@
 web.baseUrl = http://localhost/mantisbt-2.2.1/
 web.adminLogin = administrator
 web.adminPassword = root
-#gradlew -Ptarget=local testContacts
+
+ftp.host = localhost
+ftp.login = mantis
+ftp.password = mantis
