--- a/mantis-tests1/build.gradle
+++ b/mantis-tests1/build.gradle
@@ -7,8 +7,12 @@ repositories {
 dependencies {
     compile 'org.testng:testng:6.10'
     compile 'org.seleniumhq.selenium:selenium-java:2.53.1'
+    compile 'ch.qos.logback:logback-classic:1.2.2'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'commons-net:commons-net:3.6'
+    compile 'org.subethamail:subethasmtp:3.1.7'
+    compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
+
 }
 
 test {
